applications/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: traefik

  tls:
  - hosts:
      - nginx.italomariano.dev.br
    secretName: wildcard-tls

  rules:
  - host: nginx.italomariano.dev.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
